# ubuntu-system-settings

./: .bzrignore  CMakeLists.txt  INSTALL  README  common-installs-config.pri  common-project-config.pri  common-vars.pri  snapcraft.yaml  software-updates-helper.py  system-settings.pro  ubuntu-system-settings.desktop  ubuntu-system-settings.desktop.in  ubuntu-system-settings.desktop.in.in  ubuntu-system-settings.url-dispatcher
lib/SystemSettings/: CMakeLists.txt  ItemBase  PluginBase  PluginInterface  PluginManager  SystemSettings.pc.in  SystemSettings.pro  com.ubuntu.Settings.xml  debug.h  item-base.cpp  item-base.h  item-model.cpp  plugin-base.cpp  plugin-base.h  plugin-interface.h  plugin-manager.cpp  plugin-manager.h  plugin.cpp  plugin.h
plugins/: CMakeLists.txt  plugins.pro
plugins/about/: CMakeLists.txt  CustomSelector.qml  DevMode.qml  EntryComponent.qml  License.qml  Licenses.qml  PageComponent.qml  PhoneNumber.qml  PhoneNumbers.qml  SingleValueStacked.qml  Software.qml  Softwares.qml  Storage.qml  StorageBar.qml  StorageItem.qml  Version.qml  about.pro  about.settings  click.cpp  click.h  fakepkgslist.xml  networkabout.cpp  networkabout.h  plugin.cpp  qmldir  storageabout.cpp  storageabout.h
plugins/accessibility/: accessibility.pro  accessibility.settings
plugins/account/: CMakeLists.txt  account.cpp  account.h  account.pro  account.settings  plugin.cpp  plugin.h  qmldir
plugins/appearance/: ChangeImage.qml  CrossFadeImage.qml  MainImage.qml  MainPage.qml  SwappableImage.qml  UbuntuSwappableImage.qml  appearance.pro  appearance.settings  utilities.js
plugins/background/: BatchRemoveBackgrounds.qml  CMakeLists.txt  ChangeImage.qml  ListItemsHeader.qml  MainImage.qml  MainPage.qml  OverlayImage.qml  Preview.qml  SelectSource.qml  SwappableImage.qml  UbuntuSwappableImage.qml  WallpaperGrid.qml  Wallpapers.qml  background.cpp  background.h  background.pro  background.settings  plugin.cpp  plugin.h  qmldir  utilities.js
plugins/battery/: CMakeLists.txt  PageComponent.qml  SleepValues.qml  battery-panel.pro  battery.cpp  battery.h  battery.pro  battery.settings  plugin.cpp  plugin.h  qmldir
plugins/bluetooth/: AuthorizationRequestDialog.qml  CMakeLists.txt  ConfirmPasskeyDialog.qml  DevicePage.qml  DisplayPasskeyDialog.qml  DisplayPinCodeDialog.qml  PageComponent.qml  ProvidePasskeyDialog.qml  ProvidePinCodeDialog.qml  adapter1.cpp  adapter1.h  agent.cpp  agent.h  agent.xml  agentadaptor.cpp  agentadaptor.h  agentmanager1.cpp  agentmanager1.h  bluetooth.cpp  bluetooth.h  bluetooth.pro  bluetooth.settings  bluez_agent1adaptor.cpp  bluez_agent1adaptor.h  bluez_helper.h  dbus-shared.h  device.cpp  device.h  device1.cpp  device1.h  devicemodel.cpp  devicemodel.h  killswitch.cpp  killswitch.h  objectmanager.cpp  objectmanager.h  org.bluez.Adapter1.xml  org.bluez.Agent1.xml  org.bluez.Device1.xml  plugin.cpp  (+5 more)
plugins/brightness/: BrightnessSlider.qml  CMakeLists.txt  ExternalDisplay.qml  KeyboardRectangle.qml  MirDisplay.qml  PageComponent.qml  PageResolution.qml  PageRotation.qml  WifiDisplays.qml  WifiDisplaysAlert.qml  brightness.cpp  brightness.h  brightness.pro  brightness.settings  display.cpp  display.h  displaymodel.cpp  displaymodel.h  displays.cpp  displays.h  displays.js  displayserver.cpp  displayserver.h  mirdisplays.cpp  mirdisplays.h  plugin.cpp  qmldir.in
plugins/cellular/: Apn.qml  CMakeLists.txt  ChooseCarrier.qml  Common.qml  ConnectionType.qml  CustomApn.qml  CustomApnEditor.qml  Hotspot.qml  HotspotSetup.qml  PageApnEditor.qml  PageCarrierAndApn.qml  PageCarriersAndApns.qml  PageChooseApn.qml  PageChooseCarrier.qml  PageChooseCarriers.qml  PageChooseConnectionType.qml  PageComponent.qml  ViewApn.qml  apn.js  apn_editor.js  apn_manager.js  carriers.js  cellular.cpp  cellular.h  cellular.pro  cellular.settings  cellulardbushelper.cpp  cellulardbushelper.h  connectivity.cpp  connectivity.h  hotspotmanager.cpp  hotspotmanager.h  modem-helpers.js  nm_settings_connection_proxy.h  ofonoactivator.cpp  ofonoactivator.h  plugin.cpp  plugin.h  qmldir  radiosettings.cpp  (+4 more)
plugins/default/: MenuAction.qml  MenuItemDelegate.qml  MenuSection.qml  PageComponent.qml  SubMenu.qml  default-example.settings  default-plugin.cpp  default-plugin.h  default.pro  ui.qrc
plugins/diagnostics/: DiagnosticsCheckEntry.qml  PageComponent.qml  diagnostics.cpp  diagnostics.h  diagnostics.pro  diagnostics.settings
plugins/example/: CMakeLists.txt  PageComponent.qml  example-plugin.cpp  example-plugin.h  example.pro  example.settings  profile.qml  ui.qrc
plugins/flight-mode/: CMakeLists.txt  EntryComponent.qml  flight-mode-helper.cpp  flight-mode-helper.h  flight-mode.pro  flight-mode.settings  plugin.cpp  plugin.h  qmldir  urfkill-proxy.h
plugins/gps/: EntryComponent.qml  gps.pro  gps.settings
plugins/hotspot/: CMakeLists.txt  qmldir  (+4 more)
po/: CMakeLists.txt  Makefile  aa.po  af.po  am.po  ar.po  ast.po  az.po  be.po  bg.po  br.po  bs.po  ca.po  ca@valencia.po  ckb.po  cs.po  cy.po  da.po  de.po  el.po  en_AU.po  en_GB.po  eo.po  es.po  eu.po  extractsettingsinfo  fa.po  fi.po  fr.po  ga.po  gd.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  ia.po  id.po  is.po  (+42 more)
src/: CMakeLists.txt  accountsservice.cpp  accountsservice.h  connectivity.cpp  connectivity.h  debug.cpp  debug.h  i18n.cpp  i18n.h  item-model.cpp  item-model.h  main.cpp  plugin-manager.cpp  plugin-manager.h  plugin.cpp  plugin.h  sessionservice.cpp  sessionservice.h  src.pro  system-settings.pro  systemimage.cpp  systemimage.h  ui.qrc  url-map.ini  utils.cpp  utils.h
tests/: CMakeLists.txt  plugin.pro  test-plugin.cpp  test-plugin.h  test-plugin2.cpp  test-plugin2.h  test_code.py  test_code.py.in  test_push_helper.py.in  tests.pro  tst_arguments.cpp  tst_arguments.pro  tst_pagelist.cpp  tst_plugins.cpp  tst_plugins.pro  tst_systemimage.cpp
wizard/: CMakeLists.txt  MeetUbuntu.desktop  MeetUbuntu.qmlproject  PageList.cpp  PageList.h  main.cpp  test.sh  ubuntu-system-settings-wizard-cleanup.conf  ubuntu-system-settings-wizard-set-lang.conf  ubuntu-system-settings-wizard.conf  ui.qrc  wizard.desktop  wizard.pro
(+1031 files in other folders)
