if(ANDR_PROP_FOUND)
    add_subdirectory(about)
endif()
#add_subdirectory(accessibility)
add_subdirectory(background)
add_subdirectory(battery)
add_subdirectory(bluetooth)
add_subdirectory(brightness)
add_subdirectory(cellular)
add_subdirectory(example)
add_subdirectory(flight-mode)
add_subdirectory(language)
add_subdirectory(orientation-lock)
add_subdirectory(phone)
add_subdirectory(reset)
add_subdirectory(security-privacy)
add_subdirectory(sound)
add_subdirectory(system-update)
add_subdirectory(time-date)
add_subdirectory(wifi)

